[package]
name = "alife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18.0"
rand = "0.8.5"
egui = "0.19.0"
egui-winit = "0.19.0"
egui-wgpu = { version = "0.19.0", features = ["winit"] }